--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Transparent Sphere with Cubes - Three.js</title>
     <script src="https://threejs.org/build/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/18.6.4/Tween.min.js"></script>
   </head>
 <body>
   <script>
@@ -25,11 +26,18 @@ scene.add(sphereMesh);
 
     
 // Create the inner sphere geometry and material
-const innerSphereGeometry = new THREE.SphereGeometry(.5, 32, 32);
-const innerSphereMaterial = new THREE.MeshBasicMaterial({ color: 0x00ff00, transparent: true, opacity:.4, wireframe: true });
+const innerSphereGeometry = new THREE.SphereGeometry(0.5, 32, 32);
+const innerSphereMaterial = new THREE.MeshBasicMaterial({ color: 0xEE82EE, transparent: true, opacity:0.4, wireframe: true });
 const innerSphereMesh = new THREE.Mesh(innerSphereGeometry, innerSphereMaterial);
 scene.add(innerSphereMesh);
-
+    
+// Create the third, smallest sphere geometry and material
+const smallestSphereGeometry = new THREE.SphereGeometry(0.25, 32, 32);
+const smallestSphereMaterial = new THREE.MeshBasicMaterial({ color: 0x0000ff, transparent: true, opacity:0.4 });
+const smallestSphereMesh = new THREE.Mesh(smallestSphereGeometry, smallestSphereMaterial);
+smallestSphereMesh.position.copy(innerSphereMesh.position);
+scene.add(smallestSphereMesh);    
+  
 // Add longitude lines to the sphere
 for (let i = 0; i < 64; i++) {
   const points = [];
@@ -46,7 +54,7 @@ for (let i = 0; i < 64; i++) {
   if (i % 2 === 0) {
     material = new THREE.LineBasicMaterial({ color: 0xffffff, opacity: 0.1, transparent: true });
   } else {
-    material = new THREE.LineBasicMaterial({ color: 0xff0000, opacity: 0.5, transparent: true });
+    material = new THREE.LineBasicMaterial({ color: 0x008080, opacity: 0.5, transparent: true });
   }
   const line = new THREE.Line(geometry, material);
   scene.add(line);
@@ -67,7 +75,7 @@ const cubeGeometries = [
   new THREE.IcosahedronGeometry(0.1)
 ];
 const cubes = [];
-for (let i = 0; i < 30; i++) {
+for (let i = 0; i < 50; i++) {
   // Set a random shade of the ocean for the cube material
   const hue = 0.55;
   const saturation = 1;
@@ -153,7 +161,6 @@ document.addEventListener('wheel', event => {
   camera.zoom = Math.max(0.1, Math.min(camera.zoom, 10));
   camera.updateProjectionMatrix();
 });
-
 
 renderer.setAnimationLoop(render);
 
