make middle sphere metallic gold

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ scene.add(sphereMesh);
     
 // Create the inner sphere geometry and material
 const innerSphereGeometry = new THREE.SphereGeometry(0.5, 32, 32);
-const innerSphereMaterial = new THREE.MeshBasicMaterial({ color: 0xEE82EE, transparent: true, opacity:0.4, wireframe: true });
+const innerSphereMaterial = new THREE.MeshBasicMaterial({ color: 0xD4AF37, transparent: true, opacity:0.4, wireframe: true });
 const innerSphereMesh = new THREE.Mesh(innerSphereGeometry, innerSphereMaterial);
 scene.add(innerSphereMesh);
     
