attempt to remove scrollers

--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <title>Transparent Sphere with Cubes - Three.js</title>
     <style>
         .container {
-            width: 400px;
-            height: 300px;
+            margin: 0;
+            padding: 0;
             overflow: hidden;
         }
+      #container {
+			width: 100vw;
+			height: 100vh;
+		}
+	</style>
     </style>
+    
     <script src="https://threejs.org/build/three.min.js"></script>
     <script src="https://threejs.org/examples/js/vr/WebVR.js"></script>
     <script src="https://threejs.org/examples/js/vr/VREffect.js"></script>
