--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Transparent Sphere with Cubes - Three.js</title>
+    <title>Planet Purple</title>
     <style>
         .container {
             margin: 0;
@@ -440,9 +440,6 @@ function onWindowResize() {
   renderer.setSize(window.innerWidth, window.innerHeight);
 }
 
-
-
-
     
 // Render the scene on each animation frame
 function animate() {
@@ -467,7 +464,7 @@ function animate() {
   
 
   
-  renderer.render(scene, camera);
+//  renderer.render(scene, camera);
 }
 animate();
 
